VERSION 1.0.8
=============

* FIXED: Problem in windows version regarding text/binary file and \ <-> /
  difference.

* FIXED: Problem finding HTML4 .soc file

* FIXED: entity_file() to avoid a crash if the entity is not in the catalog.

* ADDED: Parse not-quoted attribute values that require quotes by parsing
  upto the next layout character.  Give a warning.  For example:
  <hr width=50%> is parsed as <hr width="50%">, but a warning is displayed.

* FIXED: Crash if start of file is not a declaration but ordinary non-blank
  text.

* ADDED: Improved source-location handling and some additional call-backs
  to the call-back interface, preparing the parser for supporting SGML
  syntax highlighting and checking editors.  See get_sgml_parser/2 and
  sgml_parse/2 predicates.

VERSION 1.0.7
=============

* IMPROVED: Redirect all memory management to print a fatal error message
  instead of crashing.

* IMPROVED: Handle the (illegal) comment <!-- some text -- more text -->
  more elegantly: assume <!-- will be terminated by --> and generate a
  warning if text was found outside --comment--.

* FIXED: Some issues in marked-section handling

* ADDED: Direct error reporting of sgml application through callback for
  demo purposes.  Message now includes the current dialect.

* FIXED: sgml application: do not convert case in XML mode.

* FIXED: Do not report error on not-declared xmlns attribute in XML mode.

* Cleaned Makefiles

VERSION 1.0.6
=============

* ADDED: SGML based documentation of the package with converters to LaTeX
  and HTML in Prolog.

* ADDED/MODIFIED: number(NumberMode) option to the load_structure/3.
  By default NUMBER and NUMBERS tokens are now parsed as tokens of digits.
  Using number(integer) they are converted to Prolog integers, provided
  they fit (Richard O'Keefe).

* ADDED: If a document is parsed without DTD and a catalog is provided,
  try finding a matching DTD file from the catalog.  If successful
  print a warning and load this DTD.
