@@ -29,6 +29,7 @@ int 		find_omitted_path(dtd_state *state, dtd_element *e,
 				  dtd_element **path);
 dtd_state *	make_state_engine(dtd_element *e);
 void		free_state_engine(dtd_state *state);
-
+void		state_allows_for(dtd_state *state,
+				 dtd_element **allow, int *n);
 
 #endif /*MODEL_H_INCLUDED*/
