@@ -1,3 +1,5 @@
+* ADDED: get_sgml_parser(Parser, dtd(-DTD)).
+
 VERSION 1.0.8
 =============
 
